Convert TypeDef to final form