@@ -8,16 +8,11 @@ import com.lapissea.dfs.type.field.IOFieldTools;
 import com.lapissea.dfs.type.field.annotations.IONullability;
 import com.lapissea.dfs.type.field.annotations.IOUnsafeValue;
 import com.lapissea.dfs.type.field.annotations.IOValue;
-import com.lapissea.dfs.utils.iterableplus.IterableIntPP;
 import com.lapissea.dfs.utils.iterableplus.Iters;
-import com.lapissea.util.ArrayViewList;
 import com.lapissea.util.NotImplementedException;
-import com.lapissea.util.NotNull;
 import com.lapissea.util.UtilL;
 
 import java.lang.reflect.Modifier;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -25,6 +20,7 @@ import static com.lapissea.dfs.SealedUtil.isSealedCached;
 import static com.lapissea.dfs.type.field.annotations.IONullability.Mode.NULLABLE;
 
 @IOValue
+@IOInstance.Order({"ioInstance", "unmanaged", "justInterface", "fields", "fieldOrder", "enumConstants", "permits", "sealedParent", "typeArgs"})
 public final class TypeDef extends IOInstance.Managed<TypeDef>{
 	
 	@IOValue
@@ -39,19 +35,29 @@ public final class TypeDef extends IOInstance.Managed<TypeDef>{
 	}
 	
 	@IOValue
+	@Order({"type", "name", "isDynamic", "unsigned", "unsafe", "dependencies", "referenceType", "nullability"})
 	public static final class FieldDef extends IOInstance.Managed<FieldDef>{
-		private IOType   type;
-		private String   name;
-		private boolean  isDynamic;
-		private boolean  unsigned;
-		private boolean  unsafe;
-		private String[] dependencies;
+		public final IOType       type;
+		public final String       name;
+		public final boolean      isDynamic;
+		public final boolean      unsigned;
+		public final boolean      unsafe;
+		public final List<String> dependencies;
 		
 		@IONullability(NULLABLE)
-		private IOValue.Reference.PipeType referenceType;
-		private IONullability.Mode         nullability;
+		public final IOValue.Reference.PipeType referenceType;
+		public final IONullability.Mode         nullability;
 		
-		public FieldDef(){ }
+		public FieldDef(IOType type, String name, boolean isDynamic, boolean unsigned, boolean unsafe, List<String> dependencies, IOValue.Reference.PipeType referenceType, IONullability.Mode nullability){
+			this.type = Objects.requireNonNull(type);
+			this.name = Objects.requireNonNull(name);
+			this.isDynamic = isDynamic;
+			this.unsigned = unsigned;
+			this.unsafe = unsafe;
+			this.dependencies = List.copyOf(dependencies);
+			this.referenceType = referenceType;
+			this.nullability = Objects.requireNonNull(nullability);
+		}
 		
 		public FieldDef(IOField<?, ?> field){
 			type = IOType.of(field.getAccessor().getGenericType(null));
@@ -62,28 +68,15 @@ public final class TypeDef extends IOInstance.Managed<TypeDef>{
 			var deps = field.getDependencies().iter().toModSet(IOField::getName);
 			if(field.getType().isArray()) deps.remove(FieldNames.collectionLen(field.getAccessor()));
 			if(isDynamic) deps.remove(FieldNames.genericID(field.getAccessor()));
-			dependencies = deps.toArray(String[]::new);
+			dependencies = List.copyOf(deps);
 			unsigned = field.getAccessor().hasAnnotation(IOValue.Unsigned.class);
 			unsafe = field.getAccessor().hasAnnotation(IOUnsafeValue.class);
 		}
 		
-		public IOType getType()    { return type; }
-		public String getName()    { return name; }
-		public boolean isDynamic() { return isDynamic; }
-		public boolean isUnsigned(){ return unsigned; }
-		public boolean isUnsafe()  { return unsafe; }
-		
-		public List<String> getDependencies(){
-			return dependencies == null? List.of() : ArrayViewList.create(dependencies, null);
-		}
-		
-		public IONullability.Mode getNullability()          { return nullability; }
-		public IOValue.Reference.PipeType getReferenceType(){ return referenceType; }
-		
 		@Override
 		public String toString(){
 			if(type == null) return getClass().getSimpleName() + IOFieldTools.UNINITIALIZED_FIELD_SIGN;
-			return name + (nullability != IONullability.Mode.NOT_NULL? " " + nullability : "") + ": " + type + (dependencies == null || dependencies.length == 0? "" : "(deps = [" + String.join(", ", dependencies) + "])");
+			return name + (nullability != IONullability.Mode.NOT_NULL? " " + nullability : "") + ": " + type + (dependencies.isEmpty()? "" : "(deps = [" + String.join(", ", dependencies) + "])");
 		}
 		@Override
 		public String toShortString(){
@@ -95,7 +88,7 @@ public final class TypeDef extends IOInstance.Managed<TypeDef>{
 	public interface EnumConstant extends IOInstance.Def<EnumConstant>{
 		
 		private static EnumConstant of(Enum<?> e){
-			return IOInstance.Def.of(EnumConstant.class, e.name());
+			return Def.of(EnumConstant.class, e.name());
 		}
 		
 		String getName();
@@ -109,7 +102,7 @@ public final class TypeDef extends IOInstance.Managed<TypeDef>{
 			JUST_INTERFACE
 		}
 		
-		public static SealedParent of(String name, Type type){
+		static SealedParent of(String name, Type type){
 			return IOInstance.Def.of(SealedParent.class, name, type);
 		}
 		
@@ -118,112 +111,109 @@ public final class TypeDef extends IOInstance.Managed<TypeDef>{
 	}
 	
 	
-	private boolean           ioInstance;
-	private boolean           unmanaged;
-	private boolean           justInterface;
-	private FieldDef[]        fields     = new FieldDef[0];
-	private int[]             fieldOrder = new int[0];
+	public final  boolean            ioInstance;
+	public final  boolean            unmanaged;
+	public final  boolean            justInterface;
+	public final  List<FieldDef>     fields;
+	public final  List<Integer>      fieldOrder;
 	@IONullability(NULLABLE)
-	private EnumConstant[]    enumConstants;
+	private final List<EnumConstant> enumConstants;
 	@IONullability(NULLABLE)
-	private String[]          permits;
+	private final List<String>       permits;
 	@IONullability(NULLABLE)
-	private SealedParent      sealedParent;
-	private List<ClassArgDef> typeArgs   = List.of();
+	public final  SealedParent       sealedParent;
+	public final  List<ClassArgDef>  typeArgs;
 	
-	public TypeDef(){ }
+	public TypeDef(
+		boolean ioInstance, boolean unmanaged, boolean justInterface, List<FieldDef> fields, List<Integer> fieldOrder,
+		List<EnumConstant> enumConstants, List<String> permits, SealedParent sealedParent, List<ClassArgDef> typeArgs
+	){
+		this.ioInstance = ioInstance;
+		this.unmanaged = unmanaged;
+		this.justInterface = justInterface;
+		this.fields = List.copyOf(fields);
+		this.fieldOrder = List.copyOf(fieldOrder);
+		this.enumConstants = enumConstants == null? null : List.copyOf(enumConstants);
+		this.permits = permits == null? null : List.copyOf(permits);
+		this.sealedParent = sealedParent;
+		this.typeArgs = List.copyOf(typeArgs);
+	}
 	
-	public TypeDef(@NotNull Class<?> type){
+	public static TypeDef of(Class<?> type){
+		
 		Objects.requireNonNull(type);
-		ioInstance = IOInstance.isInstance(type);
-		unmanaged = IOInstance.isUnmanaged(type);
+		var ioInstance = IOInstance.isInstance(type);
+		var unmanaged  = IOInstance.isUnmanaged(type);
+		
+		List<FieldDef> fields     = List.of();
+		List<Integer>  fieldOrder = List.of();
 		if(ioInstance){
 			if(!Modifier.isAbstract(type.getModifiers()) || UtilL.instanceOf(type, IOInstance.Def.class)){
 				var structFields = Struct.ofUnknown(type, Struct.STATE_FIELD_MAKE).getFields();
-				fields = structFields.mapped(FieldDef::new).toArray(FieldDef[]::new);
-				fieldOrder = IOFieldTools.computeDependencyIndex(structFields).iterIds().toArray();
+				fields = structFields.mapped(FieldDef::new).toList();
+				fieldOrder = IOFieldTools.computeDependencyIndex(structFields).iterIds().box().toList();
 			}
 		}
+		
+		List<EnumConstant> enumConstants = null;
 		if(type.isEnum()){
 			//noinspection unchecked,rawtypes
 			var consts = ((Class<Enum>)type).getEnumConstants();
-			var res    = new EnumConstant[consts.length];
-			for(int i = 0; i<consts.length; i++){
-				var cons = consts[i];
-				res[i] = EnumConstant.of(cons);
-			}
-			enumConstants = res;
-		}
-		if(isSealedCached(type)){
-			var src = SealedUtil.getPermittedSubclasses(type);
-			permits = new String[src.size()];
-			for(int i = 0; i<src.size(); i++){
-				permits[i] = src.get(i).getName();
-			}
-		}
-		if(ioInstance){
-			var s = type.getSuperclass();
-			if(s != null && isSealedCached(s)){
-				setSealedParent(SealedParent.of(s.getName(), SealedParent.Type.EXTEND));
-			}
-			for(var inf : type.getInterfaces()){
-				if(isSealedCached(inf)){
-					setSealedParent(SealedParent.of(inf.getName(), SealedParent.Type.JUST_INTERFACE));
-				}
-			}
-		}
-		if(!isIoInstance() && !isEnum() && type.isInterface()){
-			justInterface = true;
+			enumConstants = Iters.from(consts).map(EnumConstant::of).toList();
 		}
 		
-		var typeArgs = type.getTypeParameters();
-		this.typeArgs = new ArrayList<>(typeArgs.length);
-		for(var arg : typeArgs){
+		List<String> permits = null;
+		if(isSealedCached(type)){
+			var src = SealedUtil.getPermittedSubclasses(type);
+			permits = Iters.from(src).map(Class::getName).toList();
+		}
+		
+		SealedParent sealedParent = ioInstance? getSealedParent(type) : null;
+		
+		var justInterface = !ioInstance && enumConstants == null && type.isInterface();
+		
+		List<ClassArgDef> typeArgs = getTypeArgs(type);
+		
+		return new TypeDef(ioInstance, unmanaged, justInterface, fields, fieldOrder, enumConstants, permits, sealedParent, typeArgs);
+	}
+	
+	private static SealedParent getSealedParent(Class<?> type){
+		SealedParent sealedParent = null;
+		Class<?>     superclass   = type.getSuperclass();
+		if(superclass != null && isSealedCached(superclass)){
+			sealedParent = SealedParent.of(superclass.getName(), SealedParent.Type.EXTEND);
+		}
+		for(var inf : type.getInterfaces()){
+			if(isSealedCached(inf)){
+				var sp = SealedParent.of(inf.getName(), SealedParent.Type.JUST_INTERFACE);
+				if(sealedParent != null){
+					throw new IllegalStateException("multiple sealed parents not supported:\n" + type + "\n\t" + sealedParent + "\n\t" + sp);
+				}
+				sealedParent = sp;
+			}
+		}
+		return sealedParent;
+	}
+	
+	private static List<ClassArgDef> getTypeArgs(Class<?> type){
+		return Iters.from(type.getTypeParameters()).map(arg -> {
 			var bounds = arg.getBounds();
 			if(bounds.length != 1){
 				throw new NotImplementedException("Multiple bounds not implemented: " + type.getName());
 			}
-			this.typeArgs.add(ClassArgDef.of(arg.getName(), IOType.of(bounds[0])));
-		}
+			return ClassArgDef.of(arg.getName(), IOType.of(bounds[0]));
+		}).toList();
 	}
 	
-	private void setSealedParent(SealedParent sealedParent){
-		if(this.sealedParent != null){
-			throw new IllegalStateException("multiple sealed parents not supported:\n" + this + "\n\t" + this.sealedParent + "\n\t" + sealedParent);
-		}
-		this.sealedParent = sealedParent;
-	}
+	public boolean isEnum()  { return enumConstants != null; }
+	public boolean isSealed(){ return permits != null; }
 	
-	public boolean isUnmanaged()    { return unmanaged; }
-	public boolean isIoInstance()   { return ioInstance; }
-	public boolean isEnum()         { return enumConstants != null; }
-	public boolean isSealed()       { return permits != null; }
-	public boolean isJustInterface(){ return justInterface; }
-	
-	public IterableIntPP getFieldOrder(){
-		return Iters.ofInts(fieldOrder);
-	}
 	public List<String> getPermittedSubclasses(){
-		if(permits == null) return List.of();
-		return ArrayViewList.create(permits, null);
-	}
-	
-	public SealedParent getSealedParent(){
-		return sealedParent;
-	}
-	
-	public List<FieldDef> getFields(){
-		if(fields == null) return List.of();
-		return ArrayViewList.create(fields, null);
+		return permits == null? List.of() : permits;
 	}
 	
 	public List<EnumConstant> getEnumConstants(){
-		if(!isEnum()) return List.of();
-		return ArrayViewList.create(enumConstants, null);
-	}
-	
-	public List<ClassArgDef> getTypeArgs(){
-		return Collections.unmodifiableList(typeArgs);
+		return enumConstants == null? List.of() : enumConstants;
 	}
 	
 	@Override
@@ -233,13 +223,13 @@ public final class TypeDef extends IOInstance.Managed<TypeDef>{
 	@Override
 	public String toString(){
 		StringBuilder sb = new StringBuilder();
-		if(isIoInstance()) sb.append("IO");
-		if(isUnmanaged()) sb.append("U");
-		if(isJustInterface()) sb.append("I");
+		if(ioInstance) sb.append("IO");
+		if(unmanaged) sb.append("U");
+		if(justInterface) sb.append("I");
 		if(isSealed()){
-			var permits = this.permits.clone();
+			var permits = this.permits.toArray(String[]::new);
 			if(permits.length>0){
-				int startsPos = Iters.of(permits).mapToInt(String::length).min().orElse(0) - 1;
+				int startsPos = Iters.from(permits).mapToInt(String::length).min().orElse(0) - 1;
 				while(startsPos>0){
 					var start = permits[0].substring(0, startsPos);
 					var c     = start.charAt(start.length() - 1);
@@ -247,7 +237,7 @@ public final class TypeDef extends IOInstance.Managed<TypeDef>{
 						startsPos = 0;
 						break;
 					}
-					if(c == '$' && Iters.of(permits).allMatch(s -> s.startsWith(start))){
+					if(c == '$' && Iters.from(permits).allMatch(s -> s.startsWith(start))){
 						break;
 					}
 					startsPos--;
@@ -256,13 +246,13 @@ public final class TypeDef extends IOInstance.Managed<TypeDef>{
 					permits[i] = startsPos>0 && i>0? permits[i].substring(startsPos) : Utils.classNameToHuman(permits[i]);
 				}
 			}
-			sb.append(Iters.of(permits).joinAsStr(", ", "->[", "]"));
+			sb.append(Iters.from(permits).joinAsStr(", ", "->[", "]"));
 		}
 		sb.append('{');
 		if(!getEnumConstants().isEmpty()){
 			sb.append(Iters.from(getEnumConstants()).joinAsStr(", "));
 		}
-		sb.append(Iters.of(fields).joinAsStr(", ", FieldDef::toShortString));
+		sb.append(Iters.from(fields).joinAsStr(", ", FieldDef::toShortString));
 		sb.append('}');
 		
 		return sb.toString();
